--- a/package.json
+++ b/package.json
@@ -30,8 +30,13 @@
     "pg": "~4.5.5"
   },
   "devDependencies": {
+    "@types/async": "^2.0.32",
+    "@types/pg": "^6.1.33",
     "chai": "~3.5.0",
-    "mocha": "~2.4.5"
+    "mocha": "~2.4.5",
+    "tslint": "^3.15.1",
+    "tslint-microsoft-contrib": "^2.0.12",
+    "typescript": "^2.0.3"
   },
   "scripts": {
     "test": "mocha ./test/runner.js",
