--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/pg": "^6.1.33",
     "chai": "~3.5.0",
     "gulp": "^3.9.1",
+    "gulp-sourcemaps": "^2.2.0",
     "gulp-typescript": "^3.0.2",
     "merge2": "^1.0.2",
     "mocha": "~2.4.5",
@@ -45,6 +46,7 @@
   },
   "scripts": {
     "build": "rimraf core/required; rimraf definitions; gulp build;",
+    "build:watch": "rimraf core/required; rimraf definitions; gulp watch;",
     "lint": "tslint -c tslint.json 'core/src/**/*.ts'",
     "test": "mocha ./test/runner.js",
     "docs": "documentation build core/module.js -o docs -f html"
